# AWS-Multiagent-Infrastrucure

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  PROJECT_SUMMARY.md  README.md  pyproject.toml
.github/workflows/: ci.yml
backup/: notes.txt
examples/: basic_config.json  quickstart.py
src/aws_orchestrator/: __init__.py
src/aws_orchestrator/agents/: __init__.py  base.py  bedrock.py
src/aws_orchestrator/cli/: __init__.py  main.py
src/aws_orchestrator/core/: __init__.py  models.py  orchestrator.py
src/aws_orchestrator/guardrails/: __init__.py  compliance.py
src/aws_orchestrator/utils/: __init__.py  logger.py
tests/: __init__.py  conftest.py
tests/unit/: test_compliance.py  test_models.py  test_orchestrator.py
